swap twitter for fb in footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
             <footer class="site-footer row column mtl" role="contentinfo">
               <hr/>
               <ul class="menu quiet copyright align-right">
-                <li><a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i>@{{ site.twitter }}</a></li>
+                <li><a href="{{ site.facebook }}"><i class="fa fa-facebook"></i>@{{ site.facebok }}</a></li>
                 <li><a href="https://github.com/{{ site.github }}/"><i class="fa fa-github"></i>@{{ site.github }}</a></li>
               </ul>
               <ul class="menu quiet">
