--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,10 +71,10 @@
               {{ content }}
               
             </div>
-            <footer class="site-footer row column mtl" role="contentinfo">
+            <footer class="site-footer row column mtm" role="contentinfo">
               <hr/>
               <ul class="menu quiet copyright align-right">
-                <li><a href="{{ site.facebook }}"><i class="fa fa-facebook fa-2x"></i>facebook</a></li>
+                <li><a href="{{ site.facebook }}"><i class="fa fa-facebook-square fa-2x"></i></a></li>
                 <!--<li><a href="https://github.com/{{ site.github }}/"><i class="fa fa-github"></i>@{{ site.github }}</a></li>-->
               </ul>
               <ul class="menu quiet">
