--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,9 +55,9 @@
         <div class="off-canvas-content" data-off-canvas-content>
 
           <div class="title-bar">
-            <!--<div class="title-bar-left">
-              <span class="title-bar-title mas"><a href="{{ site.url }}">{{ site.brand }}</a></span>
-            </div>-->
+            <div class="title-bar-left">
+              <span class="title-bar-title mas"><a href="{{ site.url }}">{{ site.name }}</a></span>
+            </div>
             <div class="title-bar-right mts">
               <ul class="menu quiet show-for-medium">
                 {% include nav.html %}
